# final-project-level3-cv-06

./: .gitignore  README.md  pyproject.toml
product_serving/: .gitignore  main.py  readme.md
product_serving/app/common/: config.py  const.py
product_serving/app/dao/: image_dao.py
product_serving/app/database/: conn.py  models.py  schema.py
product_serving/app/errors/: exceptions.py
product_serving/app/frontend/: nohup.out  st_main.py
product_serving/app/ml/: model_inference.py
product_serving/app/models/: coco_detection_tood_albu.py  default_runtime_tood.py  schedule_cosine.py  tood_x101_cIoU_pafpn_ms_e35_cosined.py
product_serving/app/router/: auth.py  img.py
product_serving/app/service/: auth_service.py  image_service.py
product_serving/app/utils/: logger.py  token.py
